<resources>
    <string name="app_name">NHViewer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_next_page">Load next page</string>
    <string name="dialog_permission_title">Permission is needed</string>
    <string name="dialog_permission_msg">NHBooks needs permission to read and wtite on the external storage to save images. Without them, this app could not work well.</string>
    <string name="snack_permission_failed">The request of permissions was denied!</string>
    <string name="search_bar_hint">Search books here....</string>
    <string name="title_bar_main_recent">Latest Books</string>
    <string name="title_bar_updated_time_just_now">Updated just now</string>
    <string name="title_bar_updated_time_at">Updated at %s</string>
    <string name="title_bar_updated_time_null">Pull down to get the latest information</string>
    <string name="item_home">Home</string>
    <string name="item_recent">Recents</string>
    <string name="item_download">Saved Books</string>
    <string name="item_favorite_books">Favorite Books</string>
    <string name="item_favorite_categories">Favorite Categories</string>
    <string name="item_tag">Tags</string>
    <string name="item_character">Characters</string>
    <string name="item_group_other">Other</string>
    <string name="item_settings">Settings</string>
    <string name="item_open_nhentai">Open NHentai.net</string>
    <string name="title_page_latest">Latest</string>
    <string name="title_page_download">Saved Books</string>
    <string name="title_page_favorite">Favorite Books</string>
    <string name="title_page_favorite_category">Favorite Categories</string>
    <string-array name="page_titles">
        <item>@string/title_page_latest</item>
        <item>@string/title_page_download</item>
        <item>@string/title_page_favorite</item>
        <item>@string/title_page_favorite_category</item>
    </string-array>
    <string name="tips_network_error">Connection to NHentai failed.</string>
    <string name="snack_action_try_again">Try again</string>
    <string name="snack_action_get_it">I got it</string>
    <string name="label_added_to_favorite">FAV.</string>
    <string name="activity_random">I\'m feeling lucky</string>
    <string name="random_failed_set">Cannot get anything from NHentai. Try again?</string>
    <string name="random_no_data">Please click SHUFFLE button before.</string>
    <string name="activity_details">Details</string>
    <string name="tag_type_tag">Tags: </string>
    <string name="tag_type_parodies">Parodies: </string>
    <string name="tag_type_language">Language: </string>
    <string name="tag_type_characters">Characters: </string>
    <string name="tag_type_artists">Artists: </string>
    <string name="tag_type_group">Groups: </string>
    <string name="tag_type_upload_time">Uploaded time: </string>
    <string name="action_favorite_false">Add to favorites</string>
    <string name="action_favorite_true">Remove from favorites</string>
    <string name="favorite_add_finished">Book successfully added to favorites.</string>
    <string name="favorite_categories_add_finished">Category successfully added to favorites.</string>
    <string name="favorite_remove_finished">Book successfully removed from favorites.</string>
    <string name="favorite_categories_remove_finished">Category successfully removed from favorites.</string>
    <string name="action_share">Share....</string>
    <string name="action_share_send_text">I found a interesting book:\"%1$s\" Link:%2$s (R-18 WARNING! Share from NHBooks Client https://github.com/fython/NHentai-android )</string>
    <string name="action_share_send_category">%1$s is great. Link:%2$s (R-18 WARNING! Share from NHBooks Client https://github.com/fython/NHentai-android )</string>
    <string name="action_download_none">Save to External</string>
    <string name="action_download_okay">Delete</string>
    <string name="dialog_ask_download_title">Do you want to download this book?</string>
    <string name="dialog_ask_download_summary">It will be saved to \"%s\".</string>
    <string name="dialog_ask_delete_title">Do you want to delete this book?</string>
    <string name="dialog_ask_delete_summary">Warning! The operation CANNOT be canceled after deleting.</string>
    <string name="dialog_ask_d_or_d_title">This book hasn\'t been downloaded completely.</string>
    <string name="dialog_ask_d_or_d_summary">You have downloaded %1$d pages in \"%2$s\".</string>
    <string name="dialog_ask_d_or_d_delete">Delete</string>
    <string name="dialog_ask_d_or_d_continue">Continue download</string>
    <string name="dialog_download_title">Downloading Book: </string>
    <string name="dialog_download_progress">Downloading Progress: </string>
    <string name="dialog_download_finished">Downloading Complete!</string>
    <string name="dialog_download_error"> Error Downloading!</string>
    <string name="dialog_download_paused">(Paused)</string>
    <string name="dialog_download_restart">Has problem?</string>
    <string name="dialog_download_notification_title">Finished downloading!</string>
    <string name="dialog_download_pause">Pause/Continue</string>
    <string name="dialog_download_copying">Copying images to external storage.... Please wait.</string>
    <string name="title_preview">Preview</string>
    <string name="title_recommend">Recommended Books</string>
    <string name="activity_gallery">Gallery</string>
    <string name="info_total_pages">"%d PAGES"</string>
    <string name="action_save">Save</string>
    <string name="action_save_succeed">The current image has been saved to \"%s\".</string>
    <string name="action_save_failed">The current image hasn\'t been downloaded. Please wait for it to finish.</string>
    <string name="action_save_unknown">Failed to save images.</string>
    <string name="activity_search">Search Books</string>
    <string name="search_text_hint">Enter Book name....</string>
    <string name="tips_search_text_empty">Please input the name of the book!</string>
    <string name="action_clear">Clear text</string>
    <string name="action_clear_recents">Clear all Recents</string>
    <string name="activity_search_result">Search Results</string>
    <string name="title_search_result">Search Results: %s</string>
    <string name="tips_no_result">No Results.</string>
    <string name="tips_no_more_results">This is the last page.</string>
    <string-array name="languages">
        <item>All</item>
        <item>Chinese</item>
        <item>English</item>
        <item>Japanese</item>
    </string-array>
    <string-array name="tags">
        <item>Required tags</item>
        <item>Filtered tags</item>
    </string-array>
    <string name="settings_main">Settings</string>
    <string name="snackbar_need_restart">You need to restart the app to apply settings.</string>
    <string name="snackbar_need_restart_action">Restart Now</string>
    <string name="category_options">Application Options</string>
    <string name="category_about">About</string>
    <string name="set_title_app_version">Application Version</string>
    <string name="settings_license">Licenses</string>
    <string name="set_title_google_plus">Google Plus</string>
    <string name="set_title_google_plus_summary">+Fung Jichun</string>
    <string name="set_title_github">Github Repo</string>
    <string name="set_title_github_website">"https://github.com/fython/NHentai-android"</string>
    <string name="set_title_gpgroup">Google+ Group</string>
    <string name="set_title_gpgroup_link">"https://plus.google.com/communities/106652485673516183999"</string>
    <string name="set_title_telegram">Telegram Group</string>
    <string name="set_title_telegram_link">"https://telegram.me/joinchat/0668165200bd194d0a89b8995057e330"</string>
    <string name="set_title_alipay">Donate us via Alipay</string>
    <string name="set_title_alipay_address">316643843\@qq.com</string>
    <string name="category_ui">Appearance</string>
    <string name="category_list">List</string>
    <string name="set_title_hd_image">Load high quality preview images</string>
    <string name="set_title_hd_image_summary">Uses more data and Memory</string>
    <string name="set_title_cards_count">Horizontal cards count</string>
    <string name="set_title_cards_count_summary">Current value: %s</string>
    <string-array name="set_cards_count_options">
        <item>Automatically calculate</item>
        <item>Custom</item>
    </string-array>
    <string-array name="set_cards_count_options_value">
        <item>-1</item>
        <item>0</item>
    </string-array>
    <string name="category_details">Info page</string>
    <string name="set_title_full_image_in_details">Load Full HD images as preview</string>
    <string name="set_title_full_image_in_details_summary">It will consume plenty of data and memory.</string>
    <string name="set_title_allow_standalone_task">Allow standalone task</string>
    <string name="set_title_allow_standalone_task_desc">Each Book will be shown as a standalone task.</string>
    <string name="set_title_android_too_old_desc">This feature isn\'t supported on your Android version</string>
    <string name="settings_storage">Storage</string>
    <string name="category_folder">Folder</string>
    <string name="set_title_nomedia">Do not show saved books in gallery</string>
    <string name="set_title_nomedia_summary">Protect your secret gardens by creating \".nomedia\" in directory</string>
    <string name="dialog_donate_title">Donate us</string>
    <string name="dialog_donate_message">A nice application needs time, energy and your support.
		If you love NHBooks very much and you\'re willing to donate us, please send your support to here (Alipay):316643843\@qq.com</string>
    <string name="user_agent" translatable="false">NHBooks/Android Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko) Chrome/30.0.0.0 Mobile</string>
    <string name="clear_search_inputs">Clear All Saved Searches</string>
    <string name="clear_search_title">Clear Saved Searches</string>
    <string name="search_cleared">Search results cleared succesfully</string>
    <string name="new_version_available">New version detected: </string>
    <string name="button_update">Update</string>
    <string name="updated_apk_download_error">Error downloading update</string>
    <string name="updating">Downloading Update</string>
    <string name="update_complete">Update Downloaded Succesfully</string>
    <string name="checking">Checking for Update</string>
    <string name="no_update">The app is updated</string>
    <string name="ignore">Ignore</string>
    <string name="close">Close</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache">Clear Cache From Device</string>
    <string name="cache_cleared">Cache Cleared Successfully</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="comic_content">Comic content</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="search_here">Search Here</string>
    <string name="check_database">check database</string>
    <string name="default_collection">default_collection</string>
</resources>