<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="0"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_jumpToPage"
        android:icon="@drawable/ic_jump_to_page_black_24dp"
        android:orderInCategory="0"
        android:title="@string/action_jumpToPage"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:orderInCategory="0"
        android:title="@string/sort"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/item_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reverse"
        android:orderInCategory="100"
        android:title="@string/title_bar_updated_time_just_now"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/check_database"
        app:showAsAction="never" />

</menu>
